spacing issue resolved

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -569,5 +569,8 @@ button.cmn_btn.virtual_tour {
         padding-left:10px !important;
         padding-right:10px !important;
     }
+    .swiper{
+        margin-left: 0 !important;
+    }
 }
 
